Added missing jogl native libraries. Currently the build path is set to 32bit. You can change this by opening Project > Properties > Java Build Path > Libraries > Expand jogl.jar and gluegen-rt.jar > Adapt native library path to "lib/lib64".

--- a/.classpath
+++ b/.classpath
@@ -11,12 +11,12 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="lib/jogl.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="route-a-lot/lib"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="route-a-lot/lib/lib32"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/gluegen-rt.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="route-a-lot/lib"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="route-a-lot/lib/lib32"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
