Added new ressource organisation, added delete icon. Changed address operator returned selection.

--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,6 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="lib/jogl.jar"/>
 	<classpathentry kind="lib" path="lib/gluegen-rt.jar"/>
-	<classpathentry kind="lib" path="lib/lib32"/>
-	<classpathentry kind="lib" path="lib/lib64"/>
+	<classpathentry kind="lib" path="ressources"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
