Reorganized QT classes, completed FileQT adoption under the QuadTree class parentship. Renamed ressources folder (wrong spelling). Added MapElement uses count attribute, which should be regarded by the element db on garbage collection.

--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,6 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="lib/jogl.jar"/>
 	<classpathentry kind="lib" path="lib/gluegen-rt.jar"/>
-	<classpathentry kind="lib" path="ressources"/>
+	<classpathentry kind="lib" path="resources"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
