--- a/config/log4j.conf
+++ b/config/log4j.conf
@@ -1,6 +1,11 @@
-log4j.rootLogger=INFO, A1
 
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.logfile=org.apache.log4j.FileAppender
+log4j.appender.logfile.File=controller.log
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+
+log4j.logger.kit=INFO, stdout
