--- a/config/log4j.conf
+++ b/config/log4j.conf
@@ -9,3 +9,5 @@ log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
 log4j.logger.kit=INFO, stdout
+
+log4j.logger.kit.ral.routing.Precalculator=DEBUG
